# internal/data/mysql/model/collection_shop.gen.go
@@ -1,0 +1,30 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+const TableNameCollectionShop = "collection_shop"
+
+// CollectionShop mapped from table <collection_shop>
+type CollectionShop struct {
+	ID        int64          `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	Category  string         `gorm:"column:category;not null;uniqueIndex:ux_category_name,priority:1;comment:美食分类" json:"category"` // 美食分类
+	Name      string         `gorm:"column:name;not null;uniqueIndex:ux_category_name,priority:2;comment:名称" json:"name"`           // 名称
+	Logo      string         `gorm:"column:logo;not null;comment:logo" json:"logo"`                                                 // logo
+	Address   string         `gorm:"column:address;not null;comment:地址" json:"address"`                                             // 地址
+	CreatedAt time.Time      `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt time.Time      `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at" json:"deleted_at"`
+}
+
+// TableName CollectionShop's table name
+func (*CollectionShop) TableName() string {
+	return TableNameCollectionShop
+}
